// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DG EAC CSV transformer Produces correct JSON output structure for CoopIndustrialisedCountries_Projects_Overview 1`] = `
Object {
  "action": "",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "",
  "complete": false,
  "description": "Using the successful model of airline alliances, the EU/Korea Leadership Alliance (EUKLA) will establish a framework
within which international activities between the EU and Korea will be promoted, recorded, recognized, and rewarded.
With involvement from key industries with vested links in the EU and Korea, EUKLA will establish clear point-based
pathways to engage engineering and business students in international activities leading to recognized outcomes with
real career benefits. A total of 84 EU students and 60 Korean students will participate in the mobility component to
accumulate overseas activity points, covering intercultural activities, foreign language acquisition, industrial placements,
and research activities. Completion of a pathway will then be acknowledged with a special EUKLA award status: silver,
gold, or platinum, jointly recognized by all the university, industry, embassy, and local government partners. As a result,
EUKLA will build a strong synergy between the partners to promote mobility, recognize achievement, and meet the
needs of EU/Korean industry, thereby securing the long-term growth and success of EU/Korean relations.",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Education and training\\\\External Programmes and Policies\\\\Co-operation with industrialised countries\\\\Co-operation with other industrialised countries",
  "project_id": "EACEA-168191",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "PL",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "HU",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "LT",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "DE",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "KR",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "No",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/168191-EM-1-2009-1-PL-ERA MUNDUS-ICI",
  },
  "status": "",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [],
  "third_parties": Array [
    Object {
      "address": "Pl. Politechniki, 1,  00661,  WARSZAW",
      "country": "PL",
      "email": "",
      "name": "POLITECHNIKA WARSZAWSKA",
      "phone": "",
      "region": "",
      "role": "coordinator",
      "type": "",
      "website": "",
    },
    Object {
      "address": "Müegyetem rkp 3-9  1111 BUDAPEST",
      "country": "HU",
      "email": "",
      "name": "BUDAPEST UNIVERSITY OF TECHNOLOGY AND ECONOMICS",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "Saulétekio al.11  10223 VILNIUS",
      "country": "LT",
      "email": "",
      "name": "VILNIUS GEDIMINAS TECHNICAL UNIVERSITY",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "Max-Planck Str. 39  74081 HEILBRONN",
      "country": "DE",
      "email": "",
      "name": "UNIVERSITY OF APPLIED SCIENCES HEILBRONN",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "Daehak-ro 102, Nam-gu   ULSAN",
      "country": "KR",
      "email": "",
      "name": "UNIVERSITY OF ULSAN",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "1370 Sankyuk-dong, Buk-gu  702-701 DAEGU",
      "country": "KR",
      "email": "",
      "name": "KYUNGPOOK NATIONAL UNIVERSITY",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "1 Yangho-dong Gumi Gyeongbuk-do  730-701 GYEONGBUK-DO",
      "country": "KR",
      "email": "",
      "name": "KUMOH NATIONAL INSTITUTE OF TECHNOLOGY",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": "KR - EUKLA - European Korean Leadership Alliance",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for CreativeEurope_Projects_Overview 1`] = `
Object {
  "action": "Cooperation projects",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "EUR",
      "raw": "200000.00",
      "value": 200000,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "2014",
  "complete": false,
  "description": "The ELiT Literaturehouse Europe establishes an observatory for European contemporary literature focusing chiefly on: research, discussion and publishing results concerning literary trends across Europe, as well as the inter-cultural communication of literature within Europe and the dissemination of literature among the diverse cultural spaces within Europe. It enables writers to introduce their works in other linguistic areas and to discover new opportunities for publishing based on digital media. It develops innovative forms of communicating literature for young people from different south eastern European countries of the Danube Region Strategy who get to know Europe’s shared heritage through working on a literary subject and producing a collectively authored ebook.ELiT Literaturehouse Europe regularly organizes these events: European literature youth meetings, European writers’ reading tours sessions, in particular, with the winners of the European Union Prize for Literature, workshops for young writers and – the annual highlight – the European Literature Days in the Wachau/Lower Austria.ELiT Literaturehouse Europe headquarters is in Wachau/Lower Austria, where it facilitates networking for literary experts, centres and events as well as setting up cooperative programmes within Europe. It upgrades the professionalitiy of it‘s work and  currently sets up a programme for writers and translators-in-residence. The European Literature Days take place in Spitz, a little village in Wachau, an outstanding cultural landscape and UNESCO World Heritage Centre. They are a highlight of the annual culture programme of Spitz and both well known and estimated in the region. At the website www.literaturehouse.eu,  the European Literature social media platform www.readme.cc and trough ebook- and book on demand publications ELiT Literaturehouse Europe will introduce literary trends in Europe and publish and discuss texts on European issues in cultural policy.",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Creative Europe",
  "project_id": "552144-CREA-1-2014-1-AT-CULT-COOP1",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "AT",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "GB",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "DE",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "FR",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "HU",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "SI",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "No",
    "result": "https://ec.europa.eu/programmes/creative-europe/projects/ce-project-details/#project/552144-CREA-1-2014-1-AT-CULT-COOP1",
  },
  "status": "ongoing",
  "sub_programme_name": "Culture",
  "success_story": "No",
  "themes": Array [],
  "third_parties": Array [
    Object {
      "address": "JACOB PRANDTAUER STRASSE 11, 3390, MELK",
      "country": "AT",
      "email": "",
      "name": "WACHAU KULTUR MELK GMBH",
      "phone": "",
      "region": "Niederösterreich",
      "role": "coordinator",
      "type": "Multimedia association",
      "website": "www.kultur-melk.at",
    },
    Object {
      "address": "94 GOLDSMITH AVENUE, W3 6HW, LONDON",
      "country": "UK",
      "email": "",
      "name": "EASTERMAN MAX",
      "phone": "",
      "region": "Inner London",
      "role": "partner",
      "type": "Other",
      "website": "www.soundsright.biz",
    },
    Object {
      "address": "SCHWANENWIK 38, 22087, HAMBURG",
      "country": "DE",
      "email": "",
      "name": "LITERATURHAUS EV",
      "phone": "",
      "region": "HAMBURG",
      "role": "partner",
      "type": "Literature Foundation",
      "website": "www.literaturhaus-hamburg.de",
    },
    Object {
      "address": "RUE DE LA SORBONNE 17, 75005, PARIS",
      "country": "FR",
      "email": "",
      "name": "UNIVERSITE PARIS III SORBONNE NOUVELLE",
      "phone": "",
      "region": "Extra-Regio NUTS 2",
      "role": "partner",
      "type": "Higher education institution (tertiary level)",
      "website": "www.univ-paris3.fr",
    },
    Object {
      "address": "PAULAY EDE UTCA 19 1/1, 1061, BUDAPEST",
      "country": "HU",
      "email": "",
      "name": "EUROPAI KULTURALIS ALAPITVANY BUDAPEST",
      "phone": "",
      "region": "Budapest",
      "role": "partner",
      "type": "Multimedia association",
      "website": "ecfbudapest.com",
    },
    Object {
      "address": "MINORITENPLATZ 4, 3500, KREMS AN DER DONAU",
      "country": "AT",
      "email": "",
      "name": "NO FESTIVAL UND KINO GMBH",
      "phone": "",
      "region": "Niederösterreich",
      "role": "partner",
      "type": "Cultural operators",
      "website": "www.literaturehouseeurope.eu",
    },
    Object {
      "address": "KERSNIKOVA ULICA 4, 1000, LJUBLJANA",
      "country": "SI",
      "email": "",
      "name": "BELETRINA, ZAVOD ZA ZALOZNISKO DEJAVNOST",
      "phone": "",
      "region": "Osrednjeslovenska",
      "role": "partner",
      "type": "",
      "website": "www.beletrina.si",
    },
  ],
  "timeframe": Object {
    "from": "2015-01-01T00:00:00.000Z",
    "from_precision": "day",
    "to": "2018-12-31T00:00:00.000Z",
    "to_precision": "day",
  },
  "title": "ELiT Literaturehouse Europe",
  "type": Array [
    "Creative writing",
    "Translation",
    "Publishing",
  ],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for Culture_2007_2013_Projects_Overview 1`] = `
Object {
  "action": "",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "",
  "complete": false,
  "description": "DÉPARTS seeks to invest in the future of European contemporary dance by helping young artists with their careers. It does this by providing access to high-quality training facilities outside traditional education structures and supporting the transition to becoming a professional performing artist.",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Culture\\\\Culture (2007-2013)\\\\Multi-annual Cooperation Projects",
  "project_id": "FI-CULT-2008-MOTN-01",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "BE",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "DE",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "PT",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "HU",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "NL",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "www.parts.be",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "Yes",
    "result": "https://ec.europa.eu/programmes/creative-europe/projects/ce-project-details/#project/FI-CULT-2008-MOTN-01",
  },
  "status": "",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [],
  "third_parties": Array [
    Object {
      "address": "",
      "country": "BE",
      "email": "",
      "name": "P.A.R.T.S.",
      "phone": "",
      "region": "",
      "role": "coordinator",
      "type": "",
      "website": "www.parts.be",
    },
    Object {
      "address": "",
      "country": "",
      "email": "",
      "name": "Kunstencentrum Vooruit, Belgium",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "email": "",
      "name": "PACT Zollverein - Choreographisches Zentrum NRW, Germany",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "email": "",
      "name": "Alkantara, Portugal",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "email": "",
      "name": "Trafo, Hungary",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "email": "",
      "name": "Springdance, the Netherlands",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "email": "",
      "name": "Hebbel am Ufer, Germany",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
  ],
  "timeframe": Object {
    "from": "2006-05-01T00:00:00.000Z",
    "from_precision": "day",
    "to": "2009-04-30T00:00:00.000Z",
    "to_precision": "day",
  },
  "title": "DEPARTS: Investing in a new dance generation",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for ErasmusMundus_Projects_Overview 1`] = `
Object {
  "action": "",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "",
  "complete": false,
  "description": "The EMCL is a 24-month full-time interdisciplinary and transnational university programme at the Masters level providing integrated training in theoretical and experimental neurosciences and psycholinguistics with clinical issues. The aim of the Masters programme is to train highly qualified advanced students who are excellently prepared for research work and PhD-programmes in the above fields. 

The transnational consortium comprises three universities: Groningen (NL), Joensuu (FI) and Potsdam (DE). The programme consists of three teaching semesters and a fourth semester to do an internship and write the Masters thesis. Students will all start in Potsdam in the first month of the programme (Sept. 1-30) to organize practical arrangements and participate in intensive work-up courses on linguistics, methodology and clinical aphasiology. The rest of the first semester (Oct.1-March 1) will be spent either in Groningen or Joensuu, where two research courses in addition to a language course will be obligatory. All students spend the second term in Potsdam. The first part (March 1-April 15) concentrates on language, clinical neurology and therapy, the second part (April 15-July 15) offers two obligatory research classes. During the semester interval also spent in Potsdam (July 15-Sept. 1), students prepare their thesis exposé in combination with a course on scientific writing and they prepare their internship. During the third term, three obligatory research classes are offered in Groningen and Joensuu. At the beginning of this term, students attend an international conference and workshops organised for the consortium students. To finish the programme, the fourth term is spent at the institution of the thesis supervisor and includes an internship as well as the actual thesis work. 

The total number of credits required for completing the programme is 120 ECTS. All courses are taught in English. Students obtain a joint consortium degree recognized in all countries of the consortium partners. The programme recruits students worldwide. The requirement for admission is at least three years of higher education (BA, BSc or equivalent) with an emphasis on speech and language pathology, linguistics, biomedical sciences, psychology or special education.

Website: www.emcl-mundus.com
",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Education and training\\\\External Programmes and Policies\\\\Erasmus Mundus\\\\Joint Programmes: Master Course",
  "project_id": "EACEA-159061",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "DE",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "NL",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "FI",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "No",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/2010-0111",
  },
  "status": "",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [],
  "third_parties": Array [
    Object {
      "address": "Karl-Liebknechtstr.24, Haus 14/Zimmer 2.13, DE-14476, GOLM",
      "country": "DE",
      "email": "",
      "name": "UNIVERSITAET POTSDAM; UP",
      "phone": "",
      "region": "",
      "role": "coordinator",
      "type": "",
      "website": "www.uni-potsdam.de",
    },
    Object {
      "address": "N/A, GRONINGEN",
      "country": "NL",
      "email": "",
      "name": "RIJKSUNIVERSITEIT GRONINGEN",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "N/A, JOENSUU",
      "country": "FI",
      "email": "",
      "name": "JOENSUUN YLIOPISTO",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": "European Masters in Clinical Linguistics",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for ErasmusPlus_JeanMonnet_Projects_Overview 1`] = `
Object {
  "action": "Jean Monnet Activities",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "EUR",
      "raw": "50000.00",
      "value": 50000,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "2014",
  "complete": false,
  "description": "The project aims at reinforcing European Studies at Yildirim Beyazit University of Ankara (YBU). In early 2013 a programme for the promotion of European studies took form within the Faculty of Political Sciences of this University, having as final objective the setting-up of a Centre for European Studies. For this very reason the subsequent step has been that of transferring the Jean Monnet Chair held by the applicant from Brescia University to YBU. This proposal represents, thus, the third step of the strategy of YBU to enhance European studies in two specific fields: Economic integration and International relations. A fourth step (2015) will be the application for two modules in EU energy policy and in EU international relations, finally a fifth (2016) the application for a Pole of excellence.  “Building bridges to Europe and to the World” in Turkish “Avrupa ile Dunya arasinda Kopru Insasithis” (ADAP is the acronym, meaning Ethics) is the title of the project. ADAP aims first of all at establishing a solid base for European studies at YBU. For this we have set-up a key staff team with a strong scientific background and committed to study European integration. Furthermore six full courses will be taught. ADAP aims to spread EU knowledge and information through the Country, to this end we included actions in Universities located outside the main urban centres. Dissemination of the results is considered as another way to spread the knowledge and information on the EU through Turkey. For this reason we pay strong attention to the dissemination strategy. The project aims at building bridges to Europe through several actions: dialogue with policy makers, training for journalists, visiting Jean Monnet colleagues for workshops, seminars on EU topical issues. YBU hosts many international students coming from Central Asia, Africa and the Balkans.  All the activities of the Chair will be open to these students. Three research projects will be realized. ",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Erasmus+",
  "project_id": "553065-EPP-1-2014-1-TR-EPPJMO-CHAIR",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "TR",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "No",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/553065-EPP-1-2014-1-TR-EPPJMO-CHAIR",
  },
  "status": "finalized",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [
    "Economic and financial affairs (incl. funding issues); International cooperation",
    "international relations",
    "development cooperation",
  ],
  "third_parties": Array [
    Object {
      "address": "CANKIRI CAD CICEK SOK 3 ALTINDAG ULUS, 06050, ANKARA",
      "country": "TR",
      "email": "",
      "name": "ANKARA YILDIRIM BEYAZIT UNIVERSITESI",
      "phone": "",
      "region": "Turkey Extra-Regio",
      "role": "coordinator",
      "type": "",
      "website": "www.ybu.edu.tr",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": "Building bridges with Europe and with the world  EN Avrupa ile Dunya arasinda Kopru Insasi TR ",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for ErasmusPlus_KA1_2014_LearningMobilityOfIndividuals_Projects_Overview 1`] = `
Object {
  "action": "Learning Mobility of Individuals",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "EUR",
      "raw": "2605.00",
      "value": 2605,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "2014",
  "complete": false,
  "description": "1 Background: 
Project \\"e-twinning\\" an \\"inter-cultural journey through Europe\\" from Berlin as a divided city until 2014 planned in several phases. The Project will be a motor of european development and mobility. Primary has the cooperation together european schools.


 2. Aims and points of interest:
What can be achieved through cooperation with European schools and students of the \\"European family\\" and the importance of mobility as an engine of development. 
 The project will show places of interest in Berlin connected with (History/Politics/Society/Religion/Food/Hospitality) eye witnesses will be spoken to about it and then the findings will be presented as an introductory journey to other schools via e twinning using video.
This will have introduced the city and at the end it will have had the effect of having brought all Europe closer together by means of a intercultural journey.
Hopefully it will break down prejudices and awake interest in different cultures and strengthen learning over national borders using modern communication like SKYPE and other social networks.
The importance of the “Digital Agenda” will be shown to students in a practical manner. The instruction will be done in English so schools in Eastern Europe can also partake.


3. Participants:
Two classes of 30 students will partake. The module will be undertaken in the Ethic class.
As the project is still in the starting phase no concrete statements can be made regarding the next phases.
",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Erasmus+",
  "project_id": "2014-1-DE03-KA101-000001",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "DE",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "No",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/2014-1-DE03-KA101-000001",
  },
  "status": "finalized",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [
    "Teaching and learning of foreign languages",
  ],
  "third_parties": Array [
    Object {
      "address": "Pistoriusstraße 133, 13086, Berlin",
      "country": "DE",
      "email": "",
      "name": "Primo-Levi-Gymnasium",
      "phone": "",
      "region": "BERLIN",
      "role": "coordinator",
      "type": "",
      "website": "www.gymnasium-weissensee.cidsnet.de",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": "Mobilisierung der Lehrer zur Einführung des bilingualen Unterrichts und Einbindung des E-twinning zur globalen Internationalisierung!",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for ErasmusPlus_KA1_2015_LearningMobilityOfIndividuals_Projects_Overview 1`] = `
Object {
  "action": "Learning Mobility of Individuals",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "EUR",
      "raw": "3565.00",
      "value": 3565,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "2015",
  "complete": false,
  "description": "In order to keep the language skills of the teachers at the Primary School as high as possible, constant training it is crucial. This year we will make our first experience with Erasmus+ and therefore will send Sibylle Büchel in this English project. Sibylle Büchel teaches for almost 20 years at out school and in these years always was very interested in further education. Thus she is perfectly predestined for this project. She is class teacher in the middle school and teaches the pupils of the fifth class. In the primary school area the focus lays on the communication abilities of the pupils. Sibylle Büchel will be able to transfer elements of the chosen course \\"English for Effective Communication\\" into her everyday life and she will be able to adapt course contents according to the class level. This will enable to meet the requirements in the primary school area and to better prepare the pupils for secondary school.",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Erasmus+",
  "project_id": "2015-1-LI01-KA101-000034",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "LI",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "No",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/2015-1-LI01-KA101-000034",
  },
  "status": "finalized",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [
    "Teaching and learning of foreign languages",
  ],
  "third_parties": Array [
    Object {
      "address": "Dorf 43, 9488, Schellenberg",
      "country": "LI",
      "email": "",
      "name": "Gemeindeschule Schellenberg",
      "phone": "",
      "region": "Liechtenstein",
      "role": "coordinator",
      "type": "",
      "website": "www.schellenberg.li",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": "English for effective communication",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for ErasmusPlus_KA1_2016_LearningMobilityOfIndividuals_Projects_Overview 1`] = `
Object {
  "action": "Learning Mobility of Individuals",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "EUR",
      "raw": "53110.00",
      "value": 53110,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "2016",
  "complete": false,
  "description": "In the three-tier school system on secondary school level in the Principality of Liechtenstein the Oberschule Eschen takes care of many students with learning difficulties and behavioural challenges. The quota of students coming from educationally deprived families and/or families with migration background is very high. Accordingly high is the proportion of risk school pupils.The team of the Oberschule Eschen wants to encounter these problem through a holistic approach. The pupils should be encouraged through modern teaching methods in the cognitive as well as in the social field. The promotion of independent, self-responsible learning is a top priority. Learners should acquire attractive and  true-to-life skills through stimulating learning environments and practical activities  and develop a willingness for lifelong learning. Competence grids as  additional, individual assessment instruments should be implemented.A possible major focus may be the raise of awareness  of nutrition and exercise as key factors for learning success . The well-being at school shall be supported by violence preventive and community-building activities for learners as well as for teachers. The multicultural background of the students and their parents as well as of a part of the teaching professionals should be regarded more deeply as an opportunity to  implement our mission values such as appreciation, cooperation and individuality, immediately.So should the teachers team, consisting of 30 teachers, attend developments for example in the fields of practical tution, project work for students with handicaps or problems as mentioned above and further modern teaching technologies as well as their individual assessment opportunities. School visits, to compare how other schools act sucessfully in terms on the subject, would also be an important aspect of the training. Language courses or further training courses in English would be a good basis for international collaboration with other schools like student exchange projects for example in order to enable impressive and sustainable learning in many ways.A long-term effect of such developments would be more selfassurance  for the teachers when applying new methods. A theoretical background, gaining experience from practice and the compare to schools with similar conditions lead to a well-founded knowledge. Not to be forgotten is also a sustainable team-building impact if proportions of teachers can improve their skills together and apply the newly acquired knowledge at school.",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Erasmus+",
  "project_id": "2016-1-LI01-KA101-000050",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "LI",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "No",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/2016-1-LI01-KA101-000050",
  },
  "status": "finalized",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [
    "Teaching and learning of foreign languages; Intercultural/intergenerational education and (lifelong)learning; Social dialogue",
  ],
  "third_parties": Array [
    Object {
      "address": "Fronagass 16, 9492, Eschen",
      "country": "LI",
      "email": "",
      "name": "Oberschule Eschen",
      "phone": "",
      "region": "",
      "role": "coordinator",
      "type": "",
      "website": "www.oberschule-eschen.li",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": "Interkulturelles Lernen im demokratischen Bildungsprozess",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for ErasmusPlus_KA1_2017_LearningMobilityOfIndividuals_Projects_Overview 1`] = `
Object {
  "action": "Learning Mobility of Individuals",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "EUR",
      "raw": "13190.00",
      "value": 13190,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "2017",
  "complete": false,
  "description": "As a leading city school, we put emphasis  on our teachers and expert associates\` professional development and training. Considering that our constant  progress of students' achievements,  school organizational skills, quality of teaching and overall school image are our permanent goals, we  have applied to participate in the local project \\"School Modernization\\" and received assurance that certain funds  would be given for obtaining new information technology. Therefore, we have decided to IMPROVE other KEY COMPETENCIES of our teachers, preparing them in time for these technology innovations  and maintaining continuous development  of our school. We have selected a team of nine enough motivated and professionally educated members. We would like to begin the process of internationalization as soon as possible, establishing collaboration with schools from other countries from which we can learn a great deal and to contribute to the European dimension of our school. 
We have found a school in Ostrava, Czech Republic over the eTwinning platform, very similar to our school, where we can learn the following from job shadowing:
- Teaching  organization and project realisation, 
- School management and better school image
- Clil method of language learning and other subjects
- Learning history  through study visits and field lessons
- New methods and free activities in music learning
 - Writing projects regarding the everyday school life and ensuring better opportunities for  teachers\` professional development.
 - Development of new teaching methods in languages and maths (through better understanding of intellectual abilities and simplifying the process of studying)
According  to  The European school development plan we  have found  structured course which will strengthen our competence in 
- Web design, in order to improve, update and maintain school's site as well as school's management and school image at social networks and  other educational portals.
We believe that with these results, our school would just begin the process of internationalization, thus collaboration with the school in Ostrava would continue, including working on common projects, new mobilities, and study visits (but we also hope that they would be able to visit us since we believe that we also have valuable practices to share).
",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Erasmus+",
  "project_id": "2017-1-RS01-KA101-000006",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "RS",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "CZ",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "http://nadausavrsavanje.weebly.com",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "No",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/2017-1-RS01-KA101-000006",
  },
  "status": "ongoing",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [
    "Key Competences (incl. mathematics and literacy) - basic skills; ICT - new technologies - digital competences; International cooperation",
    "international relations",
    "development cooperation",
  ],
  "third_parties": Array [
    Object {
      "address": "Lomničke borbe 7, 37000, Kruševac",
      "country": "RS",
      "email": "",
      "name": "OS \\"Nada Popovic\\"",
      "phone": "",
      "region": "Serbia",
      "role": "coordinator",
      "type": "",
      "website": "http://www.nadapopovic.edu.rs/",
    },
    Object {
      "address": "Kosmonautů 2217/15, 700 30, Ostrava",
      "country": "CZ",
      "email": "",
      "name": "Zakladni skola a materska skola Ostrava-Zabreh, Kosmonautu 15, prispevkova organizace",
      "phone": "",
      "region": "Moravskoslezský kraj",
      "role": "partner",
      "type": "School/Institute/Educational centre – General education (primary level)",
      "website": "www.kosmonautu15.cz",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": " Internationalization of the school through innovative methods and greater use of ICT in teaching",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for ErasmusPlus_KA1_2018_LearningMobilityOfIndividuals_Projects_Overview 1`] = `
Object {
  "action": "Learning Mobility of Individuals",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "EUR",
      "raw": "106530.00",
      "value": 106530,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "2018",
  "complete": false,
  "description": "In the three-tier school system on secondary school level in the Principality of Liechtenstein the Oberschule Eschen takes care of many students with learning difficulties and behavioural challenges. The quota of students coming from educationally deprived families and/or families with migration background is very high. Accordingly high is the proportion of risk school pupils.

The team of the Oberschule Eschen wants to encounter these problem through a holistic approach. The pupils should be encouraged through modern teaching methods in the cognitive as well as in the social field. The promotion of independent, self-responsible learning is a top priority. Learners should acquire attractive and  true-to-life skills through stimulating learning environments and practical activities  and develop a willingness for lifelong learning. Competence grids as  additional, individual assessment instruments should be implemented. This is also a requirement of the new curriculum, which is expected in 2019.

A possible major focus may be the raise of awareness  of nutrition and exercise as key factors for learning success . The well-being at school shall be supported by violence preventive and community-building activities for learners as well as for teachers. The multicultural background of the students and their parents as well as of a part of the teaching professionals should be regarded more deeply as an opportunity to  implement our mission values such as appreciation, cooperation and individuality, immediately.

So should the teachers team, consisting of 30 teachers, attend developments for example in the fields of practical tution, project work for students with handicaps or problems as mentioned above and further modern teaching technologies as well as their individual assessment opportunities. School visits, to compare how other schools act sucessfully in terms on the subject, would also be an important aspect of the training. Language courses or further training courses in English would be a good basis for international collaboration with other schools like student exchange projects for example in order to enable impressive and sustainable learning in many ways. The new media concept requires a future-oriented further education of teachers in the field of digital learning media.

A long-term effect of such developments would be more selfassurance  for the teachers when applying new methods. A theoretical background, gaining experience from practice and the compare to schools with similar conditions lead to a well-founded knowledge. Not to be forgotten is also a sustainable team-building impact if proportions of teachers can improve their skills together and apply the newly acquired knowledge at school.",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Erasmus+",
  "project_id": "2018-1-LI01-KA101-000090",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "LI",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "No",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/2018-1-LI01-KA101-000090",
  },
  "status": "ongoing",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [
    "EU Citizenship",
    "EU awareness and Democracy; Intercultural/intergenerational education and (lifelong)learning; Cooperation between educational institutions and business",
  ],
  "third_parties": Array [
    Object {
      "address": "Fronagass 16, 9492, Eschen",
      "country": "LI",
      "email": "",
      "name": "Oberschule Eschen",
      "phone": "",
      "region": "",
      "role": "coordinator",
      "type": "",
      "website": "www.oberschule-eschen.li",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": "Interkulturelles Lernen im Kontext der europäischen Gemeinschaftsbildung",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for ErasmusPlus_KA2_CooperationForInnovationAndTheExchangeOfGoodPractices_Projects_Overview 1`] = `
Object {
  "action": "Cooperation for innovation and the exchange of good practices",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "EUR",
      "raw": "112527.93",
      "value": 112527.93,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "2014",
  "complete": false,
  "description": "Short summary in English: The Europäisches Institut für interkulturelle und interreligiöse Forschung stands for research projects and studies on the one hand and regular conferences and educational events on the other, esp. in the academic field of religion and culture. \\"Community Educaton\\" of course is a main part of this interest. Life long learning means an important initial process for society at all. In the context of our strategic partnership we want to come together with the other partner organizations for regular encounter and exchange concerning problems of migration and integration as weil as questions of education and social work in Belgium, Germany and Liechtenstein. Each partner will be engaged within the common project by its own possibilties and profiles. To organize our study process on different levels of \\"Community Education\\" it is necessary to use our transnational meetings and workshops to communicate and cooperate with each other in Belgium, Germany and Liechtenstein. Last but not least our strategic partnerships is based on several research reports being published iwithin our European context recently, e.g. \\"Community Education in Österreich\\" (under http://www.equi.at/dateien/CE-Endbericht_IHS.pdf).",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Erasmus+",
  "project_id": "2014-1-LI01-KA200-000005",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "LI",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "DE",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "BE",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "Yes",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/2014-1-LI01-KA200-000005",
  },
  "status": "finalized",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [
    "Intercultural/intergenerational education and (lifelong)learning",
  ],
  "third_parties": Array [
    Object {
      "address": "Austrasse 15, 9495, Triesen",
      "country": "LI",
      "email": "",
      "name": "Europäisches Institut für interkulturelle und interreligiöse Forschung",
      "phone": "",
      "region": "Liechtenstein",
      "role": "coordinator",
      "type": "",
      "website": "http://www.europaeisches-institut.li",
    },
    Object {
      "address": "St. Luziweg 2, 9487, Bendern",
      "country": "LI",
      "email": "",
      "name": "Liechtenstein-Institut",
      "phone": "",
      "region": "Liechtenstein",
      "role": "partner",
      "type": "Research Institute/Centre",
      "website": "www.liechtenstein-institut.li",
    },
    Object {
      "address": "Heilbronner Str. 180, 70191, Stuttgart",
      "country": "DE",
      "email": "",
      "name": "Diakonisches Werk der evangelischen Kirche in Württemberg e.V.",
      "phone": "",
      "region": "BADEN-WÜRTTEMBERG",
      "role": "partner",
      "type": "Non-governmental organisation/association/social enterprise",
      "website": "www.diakonie-wuerttemberg.de",
    },
    Object {
      "address": "Mechelsestraat 44-46, 1000, Brussels",
      "country": "BE",
      "email": "",
      "name": "EU WAREHOUSE",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "Other",
      "website": "www.eu-warehouse.be",
    },
    Object {
      "address": "WOERTHSTRASSE 10, 50668, KOELN",
      "country": "DE",
      "email": "",
      "name": "KATHOLISCHE FACHHOCHSCHULE NORDRHEIN-WESTFALEN",
      "phone": "",
      "region": "NORDRHEIN-WESTFALEN",
      "role": "partner",
      "type": "Higher education institution (tertiary level)",
      "website": "www.katho-nrw.de",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": "Community Education",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for ErasmusPlus_KA3_SupportForPolicyReform_Projects_Overview 1`] = `
Object {
  "action": "Support for policy reform",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "EUR",
      "raw": "448324.00",
      "value": 448324,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "2015",
  "complete": false,
  "description": "Developing an inclusive education system is not only a matter of equal rights. Access to education can put persons with disabilities on equal footing with non-disabled persons, promotes diversity within the educational environment and creates social bonds between persons with and without disabilities. It is also a means for promoting education systems with an emphasis on achieving a common learning environment guaranteeing the presence, participation and achievement of equal outcomes for all learners. Moreover, equal access to inclusive education in the mainstream improves the employment and work prospects of persons with disabilities. The ALdia project will create an innovative, comprehensive and sustainable framework that will promote the equal access of disabled students and trainees to University education and vocational training. This framework will a) define student needs in both higher education and VET sectors, b) develop and implement a flexible, massive open online course (MOOC) for higher education and VET education professionals and c) validate the acquired expertise through certification that will be based on the ECVET principles, thus facilitating its use across Europe. ALdia will provide open, practical and sharable material for institutions to develop and deliver quality equal learning opportunities. It will also create synergies and encourage cooperation between education providers at all levels, in order to have a multiplier effect in Europe and beyond. Finally, it will provide evidence for policy-making that supports the development of learning environments that foster equity and inclusion. It will thus promote the aims of the European Disability Strategy 2010-2020 and the Education and Training 2020 programme (ET2020). ALdia is expected to a) generate genuine and sustainable improvements in the education and training system and policies and b) improve the situation of young disabled people regarding attainment, social inclusion and well-being.",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Erasmus+",
  "project_id": "562155-EPP-1-2015-1-ES-EPPKA3-PI-FORWARD",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "ES",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "IT",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "GR",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "http://aldia-project.eu/",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "No",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/562155-EPP-1-2015-1-ES-EPPKA3-PI-FORWARD",
  },
  "status": "ongoing",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [],
  "third_parties": Array [
    Object {
      "address": "CAMPUS DE SAN VICENTE RASPEIG 99, 03690, ALICANTE",
      "country": "ES",
      "email": "",
      "name": "UNIVERSIDAD DE ALICANTE",
      "phone": "",
      "region": "Comunidad Valenciana",
      "role": "coordinator",
      "type": "",
      "website": "www.ua.es",
    },
    Object {
      "address": "CARRETERA SAN VICENTE KM 10, 48510, TRAPAGARAN",
      "country": "ES",
      "email": "",
      "name": "FONDO FORMACION EUSKADI SLL",
      "phone": "",
      "region": "País Vasco",
      "role": "partner",
      "type": "School/Institute/Educational centre – Vocational Training (secondary level)",
      "website": "",
    },
    Object {
      "address": "VIA BENEDETTO LETO 1, 90040, TRAPPETO",
      "country": "IT",
      "email": "",
      "name": "CESIE",
      "phone": "",
      "region": "Sicilia",
      "role": "partner",
      "type": "Accreditation, certification or qualification body",
      "website": "",
    },
    Object {
      "address": "VERANZEROU 1, 10677, ATHINA",
      "country": "EL",
      "email": "",
      "name": "ASTIKI MI KERDOSKOPIKI ETAIREIA KAIMI KUBERNITIKI ORGANOSI FOUR ELEMENTS",
      "phone": "",
      "region": "Aττική (Attiki)",
      "role": "partner",
      "type": "Non profit organisations",
      "website": "www.4-elements.org",
    },
    Object {
      "address": "GR. LAMPRAKI 122, 185 32, PIRAEUS",
      "country": "EL",
      "email": "",
      "name": "UNIVERSITY OF PIRAEUS RESEARCH CENTER",
      "phone": "",
      "region": "Aττική (Attiki)",
      "role": "partner",
      "type": "Higher education institution (tertiary level)",
      "website": "",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": "Accessible Learning design, implementation and accreditation",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for ErasmusPlus_Sports_Projects_Overview 1`] = `
Object {
  "action": "Sport",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "EUR",
      "raw": "58630.00",
      "value": 58630,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "2014",
  "complete": false,
  "description": "Many young people (11-15) lack motivation to study and are not interested in personal development. Moreover, modern technologies have done significant influence on children of that age and iPads and iPhones play great role in their life keeping them busy not only after school but during the lessons and breaks as well. All this leads to the decrease of physical activity. So this combination of low motivation for personal development and decrease of physical activity we find as a big problem and threat. On the other hand, sport clubs, schools and other organizations working with young people often lack tools, skills and competence to provide activities and events attractive to everyone, encourage contacts between people from different social, ethnic, cultural groups and with different capabilities. So thought sport organizations embody a unique potential in prevention and health promotion, this potential is not developed, in many cases do not work and its impact is not visible and measurable. At the same time schools also encounter a problem of students’ indifference not only to physical activity, but to personal development as well. Our main idea is to use sport as a tool to improve social, personal and professional skills of young people (11-15) and raise awareness about positive impact of active and healthy life style. We presume that information about the need of physical activity should reach not only children, but their teachers as well and this should be done in innovative way. Our aim is to make sport and physical activity a way to improve motivation for personal development in terms of gaining physical, social and even scientific knowledge. We believe that new method of combining sport and scientific approach may be effective way to raise awareness about the necessity of physical activity and may contribute to the implementation of EU Physical Activity Guidelines (10, 13 and 23).",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Erasmus+",
  "project_id": "556927-EPP-1-2014-1-LT-SPO-SCP",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "LT",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "PL",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "LV",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "ES",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "TR",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "BG",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "https://www.facebook.com/groups/578506935585056/",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "Yes",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/556927-EPP-1-2014-1-LT-SPO-SCP",
  },
  "status": "finalized",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [],
  "third_parties": Array [
    Object {
      "address": "SAJUNGOS G. 14, 41133, BIRZAI",
      "country": "LT",
      "email": "",
      "name": "BIRZU LENGVOSIOS ATLETIKOS SPORTO KLUBAS",
      "phone": "",
      "region": "Panevėžio apskritis",
      "role": "coordinator",
      "type": "",
      "website": "",
    },
    Object {
      "address": "VYTAUTO G 38, 41143, BIRZAI",
      "country": "LT",
      "email": "",
      "name": "BIRZU RAJONO SAVIVALDYBES ADMINISTRACIJA",
      "phone": "",
      "region": "Panevėžio apskritis",
      "role": "partner",
      "type": "Local Public body",
      "website": "http://www.birzai.lt",
    },
    Object {
      "address": "UL SIENKIEWICZA 55, 90 009, LODZ",
      "country": "PL",
      "email": "",
      "name": "STOWARZYSZENIE INSTYTUT NOWYCH TECHNOLOGII",
      "phone": "",
      "region": "Łódzkie",
      "role": "partner",
      "type": "Other",
      "website": "www.newtechlodz.com",
    },
    Object {
      "address": "MOKYKLOS G 3 PACERIAUKSTE KAIMAS, 41416, BIRZU RAJONAS PACERIAUKSTE",
      "country": "LT",
      "email": "",
      "name": "BIRZU RAJONO PACERIAUKSTES PETRO POSKAUS PAGRINDINE MOKYKLA",
      "phone": "",
      "region": "Panevėžio apskritis",
      "role": "partner",
      "type": "Other",
      "website": "www.poskus.birzai.lm.lt",
    },
    Object {
      "address": "KULTŪRAS LAUKUMS 1A, LV-4650, VIĻĀNI, VIĻĀNU NOVADS",
      "country": "LV",
      "email": "",
      "name": "VILANU NOVADA PASVALDIBA",
      "phone": "",
      "region": "Latgale",
      "role": "partner",
      "type": "Other",
      "website": "",
    },
    Object {
      "address": "CL GIRONA 222, 08402, GRANOLLERS",
      "country": "ES",
      "email": "",
      "name": "CLUB BASQUET GRANOLLERS",
      "phone": "",
      "region": "Extra-Regio NUTS 2",
      "role": "partner",
      "type": "Sport club",
      "website": "www.cbgranollers.com",
    },
    Object {
      "address": "ATATURK BULVARI NO: 98 
BAKANLIKLAR, 06510, ANKARA",
      "country": "TR",
      "email": "",
      "name": "MINISTRY OF NATIONAL EDUCATION",
      "phone": "",
      "region": "Turkey Extra-Regio",
      "role": "partner",
      "type": "Other",
      "website": "",
    },
    Object {
      "address": "R.Q. GEO MILEV, 3, VENERA STR 36, 1111, SOFIA",
      "country": "BG",
      "email": "",
      "name": "ASOCIACIA ZA RAZVITIE NA BULGARSKIASPORT",
      "phone": "",
      "region": "София (столица) (Sofia (stolitsa))",
      "role": "partner",
      "type": "Other",
      "website": "www.bulsport.bg",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": "EU Be Active",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for LifeLongLearning_Projects_Overview 1`] = `
Object {
  "action": "",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "",
  "complete": false,
  "description": "Media and especially TV bombard us daily with news mainly negative, systematically ignoring many constructive and positive news that are taking place.
In this way, a negative psychological attitude is promoted, resulting in intensifying pessimism. This negative psychological state has more serious repercussions to young people, who should be learning of what positive is happening around us and envisioning a better future for themselves and the world.
The idea of the project is
a) to offer to students from different countries a non formal education which will train them in team working to collect positive news from local, national, European and Global sources, to classify them into categories in order  to present them in a positive news web site, by using modern computer technology methods. 
The students will:
- build up a positive way of thinking which will make them optimistic for the future
- acquire skills they are getting from the formal education and apply them in their daily lives 
- improve their native and foreign languages abilities
- be encouraged to learn and to use digital technology
- develop team work with other students around Europe  
b) to train the teachers  to be capable of guiding  the students on how:
- to search and collect positive news by using computer technology, translate them into English, categorize and present them in a positive news web site
c) to disseminate the positive way of thinking to other students and citizens by increasing the number of the active visitors of the web site and the number of positive news providers

The target group is the secondary school students and teachers.

The Leader is a public authority who assures the quality of Education and train educators.
The partners are:
- the department of Intelligent Systems of a Technical University
- an adult training organization
- 4 European secondary schools

The products are:
- training material for trainers and trainees in 5 languages
- web site for the project
- the positive news site",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Education and training\\\\Life long learning (2007-2013)\\\\COMENIUS\\\\Accompanying measures",
  "project_id": "EACEA-509925",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "RO",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "GR",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "SK",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "BG",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "No",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/509925-LLP-1-2010-1-RO-COMENIUS-CAM",
  },
  "status": "",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [],
  "third_parties": Array [
    Object {
      "address": "Icoanei, 19,  020451,  Bucharest",
      "country": "RO",
      "email": "",
      "name": "INSPECTORATUL SCOLAR AL MUNICIPIULUI BUCURESTI",
      "phone": "",
      "region": "",
      "role": "coordinator",
      "type": "",
      "website": "",
    },
    Object {
      "address": "M. Voda , 89  104 40 Athens",
      "country": "EL",
      "email": "",
      "name": "DIAN - Training and Management Activities",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "University Campus,   GR-73100 Chania",
      "country": "EL",
      "email": "",
      "name": "Technical University of Crete",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "Jiului, 163  013218 Bucharest",
      "country": "RO",
      "email": "",
      "name": "Colegiul Tehnic \\"Media\\"",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "Bellova, 54/a  837 63 Bratislava",
      "country": "SK",
      "email": "",
      "name": "State Institute of Vocational Education",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "A. Papanastasiou & Ag. Dimitriou,   15452 Psihico",
      "country": "EL",
      "email": "",
      "name": "The Moraitis School",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "Alfred Nobel, 3  1113 Sofia",
      "country": "BG",
      "email": "",
      "name": "138мо СОУ \\"Проф. Васил Златарски\\"",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": "Positive Thinking Training",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for Sports_Projects_Overview 1`] = `
Object {
  "action": "",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "EUR",
      "raw": "240000.0 EUR",
      "value": 2400000,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "",
  "complete": false,
  "description": "\\"Networks of Knowledge\\" identified mobility opportunities, promoted these across the network building an understanding of dual career practice and ultimately led to the increase of governance and dual career skills across Europe.
In simple terms this project managed to IDENTIFY, UNDERSTAND, LINK, TEST and DELIVER dual career mobility structures.

The specific objectives of the project were:
A framework for further cooperation and improved mobility opportunities for the partner networks with a structure established for continued partnerships and growing network by attracting new partners.
Creation of a European ‘professional’ body which can lead on the coordination of dual career mobility and further promote governance objectives in this area.
Raise awareness of dual career support and its importance to all stakeholders.
Mobility tools/methods established for implementation between partners.
The creation of a best practice library containing tools, templates and guidance for delivering dual career support.",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Sports\\\\Preparatory Actions and Special Events 2009-2013\\\\Preparatory actions 2013\\\\Area 1: Strengthening of good governance and dual careers in sport through support for the mobility of volunteers, coaches, managers and staff of non-profit sport organisations",
  "project_id": "EAC-2013-0493",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "GB",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "AT",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "FR",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "SE",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "FI",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "IE",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "NL",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "No",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/EAC-2013-0493",
  },
  "status": "",
  "sub_programme_name": "",
  "success_story": "Yes",
  "themes": Array [],
  "third_parties": Array [
    Object {
      "address": "Talented Athlete Scholarship Scheme, 3rd Floor, 6 North Street East Northumbria University Newcastle upon Tyne Tyne & Wear NE1 8ST",
      "country": "UK",
      "email": "",
      "name": "Sport Aid Trust and the Talented Athlete Supporting Scheme TASS",
      "phone": "",
      "region": "",
      "role": "coordinator",
      "type": "",
      "website": "http://www.sportsaid.org.uk/about-us/talented-athletescholarship-scheme/",
    },
    Object {
      "address": "Oberst-Lepperdinger-Straße 21, (Stadion Salzburg), A-5071 Wals-Siezenheim",
      "country": "AT",
      "email": "",
      "name": "Verein Karriere Danach",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "http://www.sportmitperspektive.at/",
    },
    Object {
      "address": "11 Avenue du Tremblay, 75012 Paris",
      "country": "FR",
      "email": "",
      "name": "INSEP",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "http://www.insep.fr/",
    },
    Object {
      "address": "Skansbrogatan 7, 118 60 Stockholm",
      "country": "SE",
      "email": "",
      "name": "Swedish Sports Confederation",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "http://www.rf.se/",
    },
    Object {
      "address": "Radiokatu 20, 00240 Helsinki",
      "country": "FI",
      "email": "",
      "name": "Finnish Olympic Committee",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "http://www.sport.fi/olympiakomitea/briefly-in-english",
    },
    Object {
      "address": "National Sports Campus, Dublin 15, D15 Y52H",
      "country": "IE",
      "email": "",
      "name": "Irish Institute of Sport",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "http://www.instituteofsport.ie/",
    },
    Object {
      "address": "Topsport Amsterdam, Olympisch Stadion 14, 1076DE Amsterdam",
      "country": "NL",
      "email": "",
      "name": "CTO Amsterdam / Topsport Amsterdam",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "http://topsport.amsterdam/?q=cto",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": "Networks of Knowledge",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for Tempus_Projects_Overview 1`] = `
Object {
  "action": "",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "",
  "complete": false,
  "description": "\\"The project intends to develop and upgrade the existing programmes and curricula Business-Education-Programmes for Tourism at Belarus Universities with the assistance of EU partners from DE, IT, SK and CZ.Support of the reform process in the Belarusian higher education system and its integration into the European system\\"

 The specific objectives are: \\"Qualitative Verbesserung der akademischen Ausbildung in Belarus, ihre Anpassung an die europäischen; Standards und Anbindung belarussischer Hochschulen an das europäische Bildungssystem; Einführung eines zweistufigen Studiensystems und eines ECTS in Tourismus-Studiengängen an den belarussischen Partnerhochschulen; Strukturelle und inhaltliche Modernisierung der Lehrpläne konform mit den Anforderungen der nationalen und europäischen Bildungsstandards.\\"",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Education and training\\\\External Programmes and Policies\\\\TEMPUS\\\\Tempus Joint Project - Curricular Reform",
  "project_id": "EACEA-COMP-TEM-144522",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "DE",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "BY",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "CZ",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "IT",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "SK",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "No",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/144522-TEMPUS-2008-DE-JPCR",
  },
  "status": "",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [],
  "third_parties": Array [
    Object {
      "address": "",
      "country": "DE",
      "email": "",
      "name": "Universität Paderborn",
      "phone": "",
      "region": "",
      "role": "coordinator",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "BY",
      "email": "",
      "name": "Belarussian State Economic University (BSEU)",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "BY",
      "email": "",
      "name": "Ministerium für Bildung (MB) der Republik Belarus",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "BY",
      "email": "",
      "name": "Ministerium für Sport und Tourismus (MST) der Republik Belarus",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "BY",
      "email": "",
      "name": "Nationale Agentur für Tourismus (NAT)",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "BY",
      "email": "",
      "name": "Republikanische Union Touristischer Organisationen (PCTO), Tourismusverband",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "BY",
      "email": "",
      "name": "Staatliche Kupala-Universität Grodno (SUG)",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "BY",
      "email": "",
      "name": "Staatliche Masherov-Universität Vitebsk (SUV)",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "BY",
      "email": "",
      "name": "Staatliche Pushkin-Universität Brest (SUB)",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "BY",
      "email": "",
      "name": "Belarus State University of Physical Culture (BSUPC) Minsk",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "CZ",
      "email": "",
      "name": "University of Economics (VSE) Prague",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "DE",
      "email": "",
      "name": "Kaufmann Unternehmensberatung GmbH (KUB)",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "IT",
      "email": "",
      "name": "Europäische Akademie Bozen (EURAC)",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "SK",
      "email": "",
      "name": "Matej Bel University (UMB) Banska Bystrica",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": "Modernization and Implementation of Business-Education-Programmes for Tourism in Belarus (MIBET)",
  "type": Array [],
}
`;

exports[`DG EAC CSV transformer Produces correct JSON output structure for YouthInAction_Projects_Overview 1`] = `
Object {
  "action": "",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "funding_area": Array [],
    "mmf_heading": "",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "",
  "complete": false,
  "description": "Project „Dunavijada“ is planned as two months (July-August) project during poor summer season in Vukovar and to give an opportunity to young people from different surroundings and different countries to spend some time together, to work together and share their experience.

The main objectives of the project are:
• To bring young people together from different places, different ethinic/cultural/religious groups in order to create an opportunity for creation of multiethnic and multicultural environment
• To promote diversity, tolerance and non-violence
• To promote youth work in practice
• To increase visibility of the organisation in the community

During the project we will work on tolerance, human rights, non-violence, anti-discrimination, health issues, solidarity, team work, youth work.

Methods to be used are individual work, group work, community work, games, outdoor activities, tournaments.

In two months we are planning to organise summer camp. We are also planning 2 tournaments and different outdoor activities for all our participants. In this project we are planning to include youth from Vukovar downtown as well as youth from Vukovar rural areas and try to bring one youth group from Bosna and Hercegovina.

We are planning to implement our project in several locations in town. Most of activities will be done in YPGD Youth club and premises but also at Vukovar Ada (Danube Island).

Beside our local volunteers and staff member we are planning to involve one International volunteer from Poland
",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "Youth\\\\Youth in action (2007-2013)\\\\European Voluntary Service",
  "project_id": "HR-2-01-2009-R2",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "HR",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "EAC",
  "results": Object {
    "available": "No",
    "result": "https://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details/#project/HR-2-01-2009-R2",
  },
  "status": "",
  "sub_programme_name": "",
  "success_story": "No",
  "themes": Array [],
  "third_parties": Array [
    Object {
      "address": "Vocarska 17
32000 Vukovar",
      "country": "HR",
      "email": "",
      "name": "Youth Peace Group Danube",
      "phone": "",
      "region": "",
      "role": "coordinator",
      "type": "",
      "website": "www.ypgd.org",
    },
    Object {
      "address": "",
      "country": "",
      "email": "",
      "name": "Regionalne Centrum Wolontariatu",
      "phone": "",
      "region": "",
      "role": "partner",
      "type": "",
      "website": "",
    },
  ],
  "timeframe": Object {
    "from": null,
    "from_precision": "day",
    "to": null,
    "to_precision": "day",
  },
  "title": "DUNAVIJADA",
  "type": Array [],
}
`;
